--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="./main.js" defer></script>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Welcome to the amazing game of Rock Paper Scissors!</h1>
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
+    <h1 class="title">Welcome to the amazing game of Rock Paper Scissors!</h1>
+    <div class="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <div id="container"></div>
 
 </body>
 </html>
