Add score count DOM updates and logic for final winner to playRound func
The playRound function looks at the scores and if any of them are > 4 the game stops and the final winner is shown. Scores are updated based on the outcome of the determineWinner function that returns an array (the array's values depend on who won the round array[0] contains the human score and array[1] containsthe computer score; draw returns [0,0]).

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1 class="title">Welcome to the amazing game of Rock Paper Scissors!</h1>
+    <h1 class="title">Welcome to the amazing game of Rock Paper Scissors! Whoever scores 5 wins!</h1>
     <div class="buttons">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
