Add images and styling for rock paper scissors, move update score and display round winner to separate functions

--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1 class="title">Welcome to the amazing game of Rock Paper Scissors! Whoever scores 5 wins!</h1>
+    <h1 class="title">Welcome to the amazing game of Rock Paper Scissors!</h1>
+    <h2 class="title">Whoever scores 5 wins!</h2>
     <div class="buttons">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <button id="rock">
+            <img src="/images/rock.png" alt="image of a hand showing 'rock'" class="images">
+        </button>
+        <button id="paper">
+            <img src="/images/paper.png" alt="image of a hand showing 'paper'" class="images">
+        </button>
+        <button id="scissors">
+            <img src="/images/scissors.png" alt="image of a hand showing 'scissors'" class="images">        
+        </button>
     </div>
     <div id="container"></div>
 
