Correct file path for images used

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <h2 class="title">Whoever scores 5 wins!</h2>
     <div class="buttons">
         <button id="rock">
-            <img src="/images/rock.png" alt="image of a hand showing 'rock'" class="images">
+            <img src="./images/rock.png" alt="image of a hand showing 'rock'" class="images">
         </button>
         <button id="paper">
-            <img src="/images/paper.png" alt="image of a hand showing 'paper'" class="images">
+            <img src="./images/paper.png" alt="image of a hand showing 'paper'" class="images">
         </button>
         <button id="scissors">
-            <img src="/images/scissors.png" alt="image of a hand showing 'scissors'" class="images">        
+            <img src="./images/scissors.png" alt="image of a hand showing 'scissors'" class="images">        
         </button>
     </div>
     <div id="container"></div>
